// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Align scroll and next should work 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px; transform-origin: NaNpx NaNpx;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                tAlign
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              Please Align the cut mark
              <div
                class="ant-row css-dev-only-do-not-override-hash"
              >
                <div
                  class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="img-container"
                    >
                      <img
                        src="file://url"
                      />
                    </div>
                    <div
                      class="mark"
                    >
                      <div
                        class="bar hor"
                      />
                      <div
                        class="bar vert"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                >
                  <form
                    class="ant-form ant-form-horizontal ant-form-small css-dev-only-do-not-override-hash controls"
                  >
                    <div
                      class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="x"
                            title="tX"
                          >
                            tX
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="ant-input-number-group-wrapper ant-input-number-group-wrapper-sm ant-input-number-group-wrapper-status-success css-dev-only-do-not-override-hash"
                              >
                                <div
                                  class="ant-input-number-wrapper ant-input-number-group css-dev-only-do-not-override-hash"
                                >
                                  <div
                                    class="ant-input-number ant-input-number-sm ant-input-number-in-form-item ant-input-number-status-success css-dev-only-do-not-override-hash"
                                  >
                                    <div
                                      class="ant-input-number-handler-wrap"
                                    >
                                      <span
                                        aria-disabled="false"
                                        aria-label="Increase Value"
                                        class="ant-input-number-handler ant-input-number-handler-up"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="up"
                                          class="anticon anticon-up ant-input-number-handler-up-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="up"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span
                                        aria-disabled="false"
                                        aria-label="Decrease Value"
                                        class="ant-input-number-handler ant-input-number-handler-down"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="down"
                                          class="anticon anticon-down ant-input-number-handler-down-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="down"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="ant-input-number-input-wrap"
                                    >
                                      <input
                                        aria-valuenow="1275"
                                        autocomplete="off"
                                        class="ant-input-number-input"
                                        id="x"
                                        role="spinbutton"
                                        step="1"
                                        type="number"
                                        value="1275"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="ant-input-number-group-addon"
                                  >
                                    tPx
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item css-dev-only-do-not-override-hash ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="y"
                            title="tY"
                          >
                            tY
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="ant-input-number-group-wrapper ant-input-number-group-wrapper-sm ant-input-number-group-wrapper-status-success css-dev-only-do-not-override-hash"
                              >
                                <div
                                  class="ant-input-number-wrapper ant-input-number-group css-dev-only-do-not-override-hash"
                                >
                                  <div
                                    class="ant-input-number ant-input-number-sm ant-input-number-in-form-item ant-input-number-status-success css-dev-only-do-not-override-hash"
                                  >
                                    <div
                                      class="ant-input-number-handler-wrap"
                                    >
                                      <span
                                        aria-disabled="false"
                                        aria-label="Increase Value"
                                        class="ant-input-number-handler ant-input-number-handler-up"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="up"
                                          class="anticon anticon-up ant-input-number-handler-up-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="up"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span
                                        aria-disabled="false"
                                        aria-label="Decrease Value"
                                        class="ant-input-number-handler ant-input-number-handler-down"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="down"
                                          class="anticon anticon-down ant-input-number-handler-down-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="down"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="ant-input-number-input-wrap"
                                    >
                                      <input
                                        aria-valuenow="1050"
                                        autocomplete="off"
                                        class="ant-input-number-input"
                                        id="y"
                                        role="spinbutton"
                                        step="1"
                                        type="number"
                                        value="1050"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="ant-input-number-group-addon"
                                  >
                                    tPx
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  back
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  tTake Picture
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
                type="button"
              >
                <span>
                  next
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test Align should render correctly 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                tAlign
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              Please Align the cut mark
              <div
                class="ant-row css-dev-only-do-not-override-hash"
              >
                <div
                  class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                >
                  <div
                    class="container"
                  >
                    <div
                      class="img-container"
                    >
                      <img
                        src="file://url"
                      />
                    </div>
                    <div
                      class="mark"
                    >
                      <div
                        class="bar hor"
                      />
                      <div
                        class="bar vert"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 css-dev-only-do-not-override-hash"
                >
                  <form
                    class="ant-form ant-form-horizontal ant-form-small css-dev-only-do-not-override-hash controls"
                  >
                    <div
                      class="ant-form-item css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="x"
                            title="tX"
                          >
                            tX
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="ant-input-number-group-wrapper ant-input-number-group-wrapper-sm css-dev-only-do-not-override-hash"
                              >
                                <div
                                  class="ant-input-number-wrapper ant-input-number-group css-dev-only-do-not-override-hash"
                                >
                                  <div
                                    class="ant-input-number ant-input-number-sm ant-input-number-in-form-item css-dev-only-do-not-override-hash"
                                  >
                                    <div
                                      class="ant-input-number-handler-wrap"
                                    >
                                      <span
                                        aria-disabled="false"
                                        aria-label="Increase Value"
                                        class="ant-input-number-handler ant-input-number-handler-up"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="up"
                                          class="anticon anticon-up ant-input-number-handler-up-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="up"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span
                                        aria-disabled="false"
                                        aria-label="Decrease Value"
                                        class="ant-input-number-handler ant-input-number-handler-down"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="down"
                                          class="anticon anticon-down ant-input-number-handler-down-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="down"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="ant-input-number-input-wrap"
                                    >
                                      <input
                                        aria-valuenow="0"
                                        autocomplete="off"
                                        class="ant-input-number-input"
                                        id="x"
                                        role="spinbutton"
                                        step="1"
                                        type="number"
                                        value="0"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="ant-input-number-group-addon"
                                  >
                                    tPx
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
                      >
                        <div
                          class="ant-col ant-form-item-label css-dev-only-do-not-override-hash"
                        >
                          <label
                            class=""
                            for="y"
                            title="tY"
                          >
                            tY
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="ant-input-number-group-wrapper ant-input-number-group-wrapper-sm css-dev-only-do-not-override-hash"
                              >
                                <div
                                  class="ant-input-number-wrapper ant-input-number-group css-dev-only-do-not-override-hash"
                                >
                                  <div
                                    class="ant-input-number ant-input-number-sm ant-input-number-in-form-item css-dev-only-do-not-override-hash"
                                  >
                                    <div
                                      class="ant-input-number-handler-wrap"
                                    >
                                      <span
                                        aria-disabled="false"
                                        aria-label="Increase Value"
                                        class="ant-input-number-handler ant-input-number-handler-up"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="up"
                                          class="anticon anticon-up ant-input-number-handler-up-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="up"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                      <span
                                        aria-disabled="false"
                                        aria-label="Decrease Value"
                                        class="ant-input-number-handler ant-input-number-handler-down"
                                        role="button"
                                        unselectable="on"
                                      >
                                        <span
                                          aria-label="down"
                                          class="anticon anticon-down ant-input-number-handler-down-inner"
                                          role="img"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            data-icon="down"
                                            fill="currentColor"
                                            focusable="false"
                                            height="1em"
                                            viewBox="64 64 896 896"
                                            width="1em"
                                          >
                                            <path
                                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </div>
                                    <div
                                      class="ant-input-number-input-wrap"
                                    >
                                      <input
                                        aria-valuenow="0"
                                        autocomplete="off"
                                        class="ant-input-number-input"
                                        id="y"
                                        role="spinbutton"
                                        step="1"
                                        type="number"
                                        value="0"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="ant-input-number-group-addon"
                                  >
                                    tPx
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  back
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  tTake Picture
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
                type="button"
              >
                <span>
                  next
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
